--- a/rmh-reservation-maker/css/style.css
+++ b/rmh-reservation-maker/css/style.css
@@ -383,7 +383,7 @@ rmh
     text-shadow: 1px 1px #CCC, -1px -1px #000;
     padding-bottom: 0px;
 }
-#container {margin:0 auto; padding:60px 5%; width: 90%;}
+#container {margin:0 auto; padding:0px 5%; width: 90%;}
 
 h1, h2, h3, h4, h5, h6 {color: #4c566c;  	text-shadow: rgba(255,255,255,0.5) 0 5px 6px, rgba(255,255,255,0.2) 1px 3px 3px;
 }
@@ -537,3 +537,5 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebf1f6', end
 #content {
     margin:auto 0 0 250px;
 }
+
+#pad {padding-top:60px;}
