--- a/rmh-reservation-maker/css/style.css
+++ b/rmh-reservation-maker/css/style.css
@@ -499,17 +499,21 @@ z-index: 101;}
 #nav li {padding: 10px 5px 5px 0;
     font-family: Helvetica,sans-serif;
     font-size: 14px;
-    background: #e4f5fc; /* Old browsers */
-background: -moz-linear-gradient(top, #e4f5fc 0%, #bfe8f9 50%, #9fd8ef 51%, #2ab0ed 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e4f5fc), color-stop(50%,#bfe8f9), color-stop(51%,#9fd8ef), color-stop(100%,#2ab0ed)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #e4f5fc 0%,#bfe8f9 50%,#9fd8ef 51%,#2ab0ed 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #e4f5fc 0%,#bfe8f9 50%,#9fd8ef 51%,#2ab0ed 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #e4f5fc 0%,#bfe8f9 50%,#9fd8ef 51%,#2ab0ed 100%); /* IE10+ */
-background: linear-gradient(top, #e4f5fc 0%,#bfe8f9 50%,#9fd8ef 51%,#2ab0ed 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4f5fc', endColorstr='#2ab0ed',GradientType=0 ); /* IE6-9 */height:50px;
-    text-align: right;
+background: #4b87aa; /* Old browsers */
+background: -moz-linear-gradient(top,  #4b87aa 0%, #1975aa 31%, #066dab 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4b87aa), color-stop(31%,#1975aa), color-stop(100%,#066dab)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #4b87aa 0%,#1975aa 31%,#066dab 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #4b87aa 0%,#1975aa 31%,#066dab 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #4b87aa 0%,#1975aa 31%,#066dab 100%); /* IE10+ */
+background: linear-gradient(top,  #4b87aa 0%,#1975aa 31%,#066dab 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b87aa', endColorstr='#066dab',GradientType=0 ); /* IE6-9 */
+-webkit-box-shadow: 0px 4px 5px rgba(50, 50, 50, 0.75);
+-moz-box-shadow:    0px 4px 5px rgba(50, 50, 50, 0.75);
+box-shadow:         0px 4px 5px rgba(50, 50, 50, 0.75);
+text-align: right;
     height:30px;
     width: 200px;
+    font-weight: bolder;
 }
 
 #nav li a:hover {
