--- a/rmh-reservation-maker/css/style.css
+++ b/rmh-reservation-maker/css/style.css
@@ -420,71 +420,162 @@ img.rmdlogo {
 }
 
 .goback {background:url('../images/back.png')no-repeat; width:60px; height:29px;
-}
-#ios-arrow-left {
-    left:20px;/*change the position*/
-    top:10px;/*change the position*/
+}#ios-arrow-left {
+    display : block;
     position:absolute;
+    z-index : 0;
+    left:20px;
+    height:30px;
+    width:auto;
+    padding: 0 10px 0 6px;
+    background-size : 30px 30px;
+
     background-repeat:repeat-x;
-    background-color: rgba(74,108,155,1);/*change this and the background color for the :before element*/
-    background-image : -webkit-linear-gradient(
-        bottom,
+    background-position :0;
+    background-image : -moz-linear-gradient(
+        90deg,
         rgba(0,0,0,0) 0%,
         rgba(0,0,0,0) 50%,
         rgba(255,255,255,0.1) 50%,
         rgba(255,255,255,0.3) 100%
         );
-    height:30px;
-    padding: 0 10px 0 8px;
-    z-index : 0;
-    border-radius: 6px;
-    -webkit-border-top-left-radius : 10px 15px;
-    -webkit-border-bottom-left-radius : 10px 15px;
-    border-bottom: 1px solid rgba(255,255,255,0.3);
-    box-shadow :-1px -1px 0px rgba(0,0,0,0.2)inset,
+    background-image : -o-linear-gradient(
+        90deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.3) 100%
+        );
+    background-image : -webkit-linear-gradient(
+        90deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.3) 100%
+        );
+
+    border-radius: 5px;
+
+    border-bottom: 1px solid rgba(255,255,255,0.4);
+
+    box-shadow :0 -1px 1px rgba(0,0,0,0.2)inset,
         0 1px 2px rgba(0,0,0,0.8)inset;
-    font-size : 11px;
-    display : block;
-    text-align:center;
+
     color:#fff;
-    text-shadow : 0px -1px 0px #000;
-    line-height : 30px;
-    font-family : HelveticaNeue;
-    font-weight: 700;
-    -webkit-background-size : 30px;
+    text-shadow : 0px -1px 0px rgba(0,0,0,0.8);
 }
- 
+
 #ios-arrow-left:before{
     position:absolute;
-    top:9.9%;
-    left:-5px;
-    -webkit-background-size : 22px 22px;
-    background-position :-2px -1.5px;
-    background-color: rgba(74,108,155,1);/*change to the same as the main element*/
-    background-image :
-        -webkit-gradient(linear, left bottom, right top,
-            from(rgba(0,0,0,0)),
-            color-stop(0.5, rgba(0,0,0,0)),
-            color-stop(0.5, rgba(255,255,255,0.1)),
-            to(rgba(255,255,255,0.3)));
-    height : 25px;
-    width: 25px;
-    -webkit-transform : rotate(-45deg) skew(-10deg, -10deg);
-    -webkit-border-top-right-radius : 100px 40px;
-    -webkit-border-top-left-radius : 30px 2px;
-    -webkit-border-bottom-right-radius : 2px 30px;
-    -webkit-border-bottom-left-radius : 40px 100px;
-    z-index : 1;
     content : ' ';
-    border-left : 1.5px solid rgba(255,255,255,0.3);
-    box-shadow :  1px 1px 0 rgba(0,0,0,0.2) inset,
-        -1px 1px 1px rgba(0,0,0,0.5) inset;
-    -webkit-mask-image :
+    left:-9px;
+    top:3px;
+    height : 24px;
+    width: 24px;
+    z-index : 1;
+
+    background-repeat:repeat-x;
+    background-size : 30px 30px;
+    background-position :-1px -1.5px;
+    background-image : -moz-linear-gradient(
+        45deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.4) 100%
+        );
+    background-image : -o-linear-gradient(
+        45deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.4) 100%
+        );
+    background-image : -webkit-linear-gradient(
+        45deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.4) 100%
+        );
+
+
+    -moz-transform : rotate(-45deg) skew(-10deg, -10deg);
+    -o-transform : rotate(-45deg) skew(-10deg, -10deg);
+    -webkit-transform : rotate(-45deg) skew(-10deg, -10deg);
+
+    border-top-right-radius : 11px;
+    border-top-left-radius :0px;
+    border-bottom-right-radius : 0;
+    border-bottom-left-radius : 10px;
+
+    border-left : 1.5px solid rgba(255,255,255,0.4);
+
+    box-shadow :  0px 1px 1px rgba(0,0,0,0.7) inset,
+        2px -2px 2px -3px rgba(0,0,0,0.5) inset;
+
+    /*-webkit-mask-image :
         -webkit-gradient(linear, left top, right bottom,
             from(#000000),
-            color-stop(0.33,#000000),
+            color-stop(0.4,#000000),
             color-stop(0.5, transparent),
             to(transparent));
+    */
+}
+#ios-arrow-left:after {
+
+    font-family : HelveticaNeue,Helvetica, Arial;
+    font-weight: 400;
+    font-size : 12px;
+    line-height : 30px;
+    text-align:center;    
+    content: attr(title)"";
+    z-index: 999;
+    left:-2px;
+    padding-left:3px;
+    position:relative;
+    height: 30px;
+    line-height:30px;
+    display:block;
+    background-repeat:repeat-x;
+    background-size : 30px 30px;
+    background-position :-1px -0.5px;
+    box-shadow :  0 4px 2px -3px rgba(0,0,0,0.7) inset,
+        0 -3px 2px -3px rgba(0,0,0,0.5) inset;
+    background-image : -webkit-linear-gradient(
+        90deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.3) 100%
+        );
+    background-image : -moz-linear-gradient(
+        90deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.3) 100%
+        );
+    background-image : -o-linear-gradient(
+        90deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) 50%,
+        rgba(255,255,255,0.1) 50%,
+        rgba(255,255,255,0.3) 100%
+        );
+}
+#ios-arrow-left,
+#ios-arrow-left:after,
+#ios-arrow-left:before {
+    background-color: rgba(74,108,155,1);/*originalcolor*/
+
+}
+
+#ios-arrow-left:hover,
+#ios-arrow-left:hover:after,
+#ios-arrow-left:hover:before {
+    background-color: rgba(54,88,135,1);/*hovercolor*/
+
 }
 
 .topLeftButton{position: absolute;
