--- a/rmh-reservation-maker/css/style.css
+++ b/rmh-reservation-maker/css/style.css
@@ -349,7 +349,7 @@ z-index: 10;
     
     font-family: Helvetica;
     font-weight: bold;
-    color: #bbb;
+    color: #888888;
     text-align: center;
     height:2em;
     width:95%;
