--- a/rmh-reservation-maker/css/style.css
+++ b/rmh-reservation-maker/css/style.css
@@ -376,6 +376,24 @@ z-index: 10;
 .formsubmit:hover {
   background: #42aaff;
 }
+.helpbutton{
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px;
+  text-decoration: none;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  text-shadow: 1px 1px 3px #666666;
+  border: solid #003366 0px;
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#42aaff), to(#2c66a1));
+  background: -moz-linear-gradient(top, #42aaff, #2c66a1);
+}
+.helpbutton:hover {
+  background: #42aaff;
+}
 
 .loginforms div div, .loginforms div form{
     display:inline-block;
