--- a/rmh-reservation-maker/css/style.css
+++ b/rmh-reservation-maker/css/style.css
@@ -166,6 +166,7 @@ nav.navpane ul li{
 	cursor: pointer;
 	border-bottom: 0.08em solid #FFFFFF;
 }
+
 nav.navpane ul li:last-child{
 	border-bottom: none;
 }
@@ -198,8 +199,40 @@ section.content label{
 	color: #2CCDFE;
 }
 section.content input{
-	margin-bottom: 1em;
 	display:block;
+}
+form.generic{
+	width: 40em;
+}
+form.generic label, form.generic input{
+	float: left;
+}
+form.generic label{
+	width: 19em;
+	text-align: right;
+	padding-right: 1em;
+}
+form.generic input{
+	width: 19em;
+}
+div.formRow{
+	margin-bottom: 1em;
+}
+div.formRow:after{
+	display: block;
+		clear: both;
+		content: " ";
+		height: 0;
+		overflow: hidden;
+}
+/*single input button*/
+div.formRow input[type="submit"]:first-child:nth-last-child(1) {
+    float: right;
+}
+/*two input buttons*/
+div.formRow input[type="submit"]:first-child:nth-last-child(2),
+div.formRow input[type="submit"]:first-child:nth-last-child(2) ~ div.formRow input[type="submit"] {
+    float: left;
 }
 
 
@@ -214,6 +247,7 @@ section.content input{
 	position:absolute;
 	right: 0;
 	z-index: 11;
+	top: 80px;
 }
 
 /*submit button in the login page*/
@@ -243,6 +277,28 @@ p.notice{
 }
 .btn:hover{
 	background-color: #2CCDFE;
+}
+
+a.helpbutton{
+	color: #FFFFFF;
+	text-decoration: none;
+	border-radius: 1em;
+	/*border: 0.16em solid #FFFFFF;*/
+	width: 1.35em;
+	height: 1.35em;
+	line-height: 1.4em;
+	font-weight: bold;
+	padding: 0.25em;
+	text-align: center;
+	position: absolute;
+	top:1em;
+	right: 5em;
+	cursor: pointer;
+	background-color: #2DB7E1;
+    background-image: linear-gradient(to bottom, #2DB7E1, #2DB7E1);
+    background-repeat: repeat-x;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset, 0 1px 0 rgba(255, 255, 255, 0.075);
+    
 }
 
 /*menu bar button*/
