Fixed forms for mobile devices

--- a/rmh-reservation-maker/css/style.css
+++ b/rmh-reservation-maker/css/style.css
@@ -172,9 +172,11 @@ nav.navpane ul li:last-child{
 }
 nav.navpane ul li.selected{
 	background-color: #2DB7E1;
+	color: #FFFFFF;
 }
 nav.navpane ul li:hover{
 	background-color: #AEDBE9;
+	color: #000000;
 }
 
 /*Main content section*/
@@ -212,8 +214,8 @@ form.generic label{
 	text-align: right;
 	padding-right: 1em;
 }
-form.generic input{
-	width: 19em;
+form.generic input, form.generic select{
+	width: 19.5em;
 }
 div.formRow{
 	margin-bottom: 1em;
@@ -224,6 +226,24 @@ div.formRow:after{
 		content: " ";
 		height: 0;
 		overflow: hidden;
+}
+
+div.formRow div.rightGrid{
+	width: 19.5em;
+	float: left;
+}
+div.formRow div.rightGrid label{
+	float: left;
+	width:80%;
+	text-align: left;
+}
+div.formRow div.rightGrid input[type="radio"]{
+	float: left;
+	width: 10%;
+	margin-top: 0.2em;
+}
+div.formRow input[type="submit"]{
+	width: 10em;
 }
 /*single input button*/
 div.formRow input[type="submit"]:first-child:nth-last-child(1) {
@@ -461,6 +481,25 @@ a.helpbutton{
     section.content{
     	top:4.2em;
     }
+    
+    /*Forms and form elements*/
+	form.generic{
+		width: 25em;
+	}
+	
+	form.generic label{
+		text-align: left;
+	}
+	
+	/*single input button*/
+	div.formRow input[type="submit"]:first-child:nth-last-child(1) {
+	    float: left;
+	}
+	/*two input buttons*/
+	div.formRow input[type="submit"]:first-child:nth-last-child(2),
+	div.formRow input[type="submit"]:first-child:nth-last-child(2) ~ div.formRow input[type="submit"] {
+	    float: left;
+	}
 }
 
 @media only screen and (max-width: 35em) {
@@ -476,8 +515,9 @@ a.helpbutton{
     }
     
     header.topbar h1{
-    	font-size: 1.35em;
-    	padding: 0.8em;
+    	font-size: 1.2em;
+    	padding: 0.4em;
+    	width: 10em;
     }
     
     nav.navpane{
@@ -488,6 +528,38 @@ a.helpbutton{
     section.content{
     	left: 0 !important;
     }
+    
+    /*Forms and form elements*/
+	form.generic{
+		width: 17em;
+	}
+	
+	form.generic label{
+		text-align: left;
+	}
+	
+	form.generic label, form.generic input{
+		width: 16.5em;
+	}
+	
+	div.formRow input[type="submit"]{
+		width: 7em;
+	}
+	
+	/*single input button*/
+	div.formRow input[type="submit"]:first-child:nth-last-child(1) {
+	    float: left;
+	}
+	/*two input buttons*/
+	div.formRow input[type="submit"]:first-child:nth-last-child(2),
+	div.formRow input[type="submit"]:first-child:nth-last-child(2) ~ div.formRow input[type="submit"] {
+	    float: left;
+	}
+	
+	/*header buttons*/
+	a.helpbutton{
+		right: 4em;
+	}
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
